@startuml selection observer class diagram
title Selected Shapes Class Diagram

class ClickHandler {
    - selectionPublisher: SelectionPublisher
    --
    + ClickHandler(selectionPublisher: SelectionPublisher)
}

class SelectionPublisher {
    - shapeList: ArrayList<IPaintShape>
    - subscribers: ISelectionSubscriber[]
    - selectedShapes: IPaintShape[]
    --
    + subscribe(sub: ISelectionSubscriber)
    + updateSelection(startPoint: Point, endPoint: Point)
}

interface ISelectionSubscriber {
    + notifyUpdateSelection(): void
}
 
class PaintCanvas {}

PaintCanvas --|> ISelectionSubscriber
ClickHandler --o SelectionPublisher
SelectionPublisher o--> ISelectionSubscriber


@enduml
